enpoints de registro y especie
